K8S/app-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: php-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-apache
  template:
    metadata:
      labels:
        app: php-apache
    spec:
      containers:
        - name: php-apache
          image: awanpk/farmers-portal:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: farmers-portal-service
spec:
  type: ClusterIP  
  selector:
    app: php-apache
  ports:
    - port: 80
      targetPort: 8080
